src/snapshots/abstract_bohm_tree__sam__tests__step-15.snap
---
source: src/sam.rs
expression: pos
---
Odd(
    OddPosition {
        seq: EvenPosition(
            [
                (
                    OMove {
                        alphabet: Init,
                    },
                    PMove {
                        alphabet: Free(
                            "u",
                        ),
                        pointer: None,
                    },
                ),
                (
                    OMove {
                        alphabet: Bound(
                            0,
                        ),
                    },
                    PMove {
                        alphabet: Free(
                            "u",
                        ),
                        pointer: None,
                    },
                ),
            ],
        ),
        cur: OMove {
            alphabet: Bound(
                0,
            ),
        },
    },
)
