src/snapshots/abstract_bohm_tree__sam__tests__step-16.snap
---
source: src/sam.rs
expression: env
---
Cons {
    head: Closure {
        position: EvenPosition(
            [
                (
                    OMove {
                        alphabet: Init,
                    },
                    PMove {
                        alphabet: Free(
                            "u",
                        ),
                        pointer: None,
                    },
                ),
                (
                    OMove {
                        alphabet: Bound(
                            0,
                        ),
                    },
                    PMove {
                        alphabet: Free(
                            "u",
                        ),
                        pointer: None,
                    },
                ),
            ],
        ),
        env: Cons {
            head: Closure {
                position: EvenPosition(
                    [
                        (
                            OMove {
                                alphabet: Init,
                            },
                            PMove {
                                alphabet: Free(
                                    "u",
                                ),
                                pointer: None,
                            },
                        ),
                        (
                            OMove {
                                alphabet: Bound(
                                    0,
                                ),
                            },
                            PMove {
                                alphabet: Free(
                                    "u",
                                ),
                                pointer: None,
                            },
                        ),
                    ],
                ),
                env: Cons {
                    head: Closure {
                        position: EvenPosition(
                            [
                                (
                                    OMove {
                                        alphabet: Init,
                                    },
                                    PMove {
                                        alphabet: Free(
                                            "u",
                                        ),
                                        pointer: None,
                                    },
                                ),
                            ],
                        ),
                        env: Cons {
                            head: Closure {
                                position: EvenPosition(
                                    [
                                        (
                                            OMove {
                                                alphabet: Init,
                                            },
                                            PMove {
                                                alphabet: Free(
                                                    "u",
                                                ),
                                                pointer: None,
                                            },
                                        ),
                                    ],
                                ),
                                env: Nil,
                            },
                            tail: Nil,
                        },
                    },
                    tail: Nil,
                },
            },
            tail: Nil,
        },
    },
    tail: Cons {
        head: Closure {
            position: EvenPosition(
                [
                    (
                        OMove {
                            alphabet: Init,
                        },
                        PMove {
                            alphabet: Free(
                                "u",
                            ),
                            pointer: None,
                        },
                    ),
                ],
            ),
            env: Cons {
                head: Closure {
                    position: EvenPosition(
                        [
                            (
                                OMove {
                                    alphabet: Init,
                                },
                                PMove {
                                    alphabet: Free(
                                        "u",
                                    ),
                                    pointer: None,
                                },
                            ),
                        ],
                    ),
                    env: Nil,
                },
                tail: Nil,
            },
        },
        tail: Nil,
    },
}
