src/snapshots/abstract_bohm_tree__sam__tests__step-17.snap
---
source: src/sam.rs
expression: pos
---
Even(
    EvenPosition(
        [
            (
                OMove {
                    alphabet: Init,
                },
                PMove {
                    alphabet: Free(
                        "u",
                    ),
                    pointer: None,
                },
            ),
            (
                OMove {
                    alphabet: Bound(
                        0,
                    ),
                },
                PMove {
                    alphabet: Free(
                        "u",
                    ),
                    pointer: None,
                },
            ),
            (
                OMove {
                    alphabet: Bound(
                        0,
                    ),
                },
                PMove {
                    alphabet: Bound(
                        0,
                    ),
                    pointer: Some(
                        1,
                    ),
                },
            ),
        ],
    ),
)
