src/snapshots/abstract_bohm_tree__sam__tests__step-3.snap
---
source: src/sam.rs
expression: pos
---
Odd(
    OddPosition {
        seq: EvenPosition(
            [],
        ),
        cur: OMove {
            alphabet: Free(
                "u",
            ),
        },
    },
)
