src/snapshots/abstract_bohm_tree__sam__tests__step-4.snap
---
source: src/sam.rs
expression: env
---
Cons {
    head: Closure {
        position: EvenPosition(
            [
                (
                    OMove {
                        alphabet: Init,
                    },
                    PMove {
                        alphabet: Free(
                            "u",
                        ),
                        pointer: None,
                    },
                ),
            ],
        ),
        env: Nil,
    },
    tail: Nil,
}
