src/snapshots/abstract_bohm_tree__sam__tests__step-5.snap
---
source: src/sam.rs
expression: pos
---
Even(
    EvenPosition(
        [
            (
                OMove {
                    alphabet: Free(
                        "u",
                    ),
                },
                PMove {
                    alphabet: Bound(
                        0,
                    ),
                    pointer: Some(
                        0,
                    ),
                },
            ),
        ],
    ),
)
