src/snapshots/abstract_bohm_tree__sam__tests__step.snap
---
source: src/sam.rs
expression: pos
---
Even(
    EvenPosition(
        [
            (
                OMove {
                    alphabet: Init,
                },
                PMove {
                    alphabet: Free(
                        "u",
                    ),
                    pointer: None,
                },
            ),
        ],
    ),
)
